--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,18 +1,33 @@
+{% load staticfiles %}
+
 <html>
     <head>
         <title>DK's blog</title>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+		<link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
     </head>
     <body>
-	<div>
-		<h1><a href="/">DK's Blog</a></h1>
-	</div>
-
-{% for post in posts %}
-    <div>
-        <p>published: {{ post.published_date }}</p>
-        <h1><a href="">{{ post.title }}</a></h1>
-        <p>{{ post.text|linebreaksbr }}</p>
-    </div>
-{% endfor %}
+        <div class="page-header">
+            <h1><a href="/">DK's Blog</a></h1>
+        </div>
+			<div class="content container">
+			<div class="row">
+				<div class="col-md-8">
+					{% block content %}
+						{% for post in posts %}
+							<div class="post">
+								<div class="date">
+									{{ post.published_date }}
+								</div>
+								<h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+								<p>{{ post.text|linebreaksbr }}</p>
+							</div>
+						{% endfor %}
+					{% endblock %}
+				</div>
+			</div>
+		</div>
     </body>
 </html>
